--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bridgingcode</groupId>
+	<groupId>br.com.atividade</groupId>
 	<artifactId>spring-boot-active-mq-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-active-mq-demo</name>
