--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+# activemq
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.packages.trust-all=true
+
+# datasource
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:banco
+spring.datasource.username=sa
+spring.datasource.password=
+
+# h2
+spring.h2.console.enabled=true
